Preinstall ansible collections

--- a/ansible/Dockerfile
+++ b/ansible/Dockerfile
@@ -10,6 +10,20 @@ RUN useradd -m -s /bin/bash me && \
 
 USER me
 
+RUN ansible-galaxy collection install \
+    community.crypto \
+    community.docker \
+    community.general \
+    community.kubernetes \
+    community.mongodb \
+    community.mysql \
+    community.postgresql \
+    community.routeros \
+    gluster.gluster \
+    kubernetes.core \
+    ovirt.ovirt \
+    vyos.vyos
+
 COPY config /home/me/.ssh/config
 
 WORKDIR /home/me/ansible
